# efekta_eink290_nrf52840

./: .gitignore  CMakeLists.txt  README.rst  prj.conf  sample.yaml
boards/: efekta_eink290_nrf52840.overlay
boards/arm/efekta_bme280/: Kconfig.board  Kconfig.defconfig  efekta_bme280.dts  efekta_bme280.yaml  efekta_bme280_defconfig
boards/arm/efekta_eink290_nrf52840/: Kconfig.board  Kconfig.defconfig  efekta_eink290_nrf52840.dts  efekta_eink290_nrf52840.yaml  efekta_eink290_nrf52840_defconfig
include/: multi_sensor.h  zb_mem_config_custom.h  zb_multi_sensor.h  zb_weather_sensor.h  zb_zcl_illuminance_measurement_addons.h  zb_zcl_power_config_addons.h  zb_zcl_pressure_measurement_addons.h  zb_zcl_rel_humidity_measurement_addons.h
modules/: Kconfig.aqs
modules/drivers/: CMakeLists.txt
modules/subsys/: CMakeLists.txt  Kconfig
modules/subsys/bme280/: bme280.c  bme280.h
src/: main.c
subsys/bme280/: bme280.c
subsys/max44009/: max44009.c  max44009.h
